# shoot-proto

./: Cargo.toml
src/: direction.rs  game_window.rs  input_role.rs  lib.rs  main.rs  wait_and_update.rs
src/bgsp_data/: bgchar_data.rs  bgpal_data.rs  spchar_data.rs  sppal_data.rs
src/bgsp_lib/: bg_lib.rs  bg_plane.rs  bg_resources.rs  bgsp_common.rs  classic_sprite.rs  lib.rs  sp_lib.rs  sp_resources.rs  sp_texture_bank.rs
