[package]
name = "shoot-proto"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35"
piston_window = "0.128"
pistoncore-sdl2_window = "0.68"
# once_cell = "1.17"

bgsp-lib2 = { path= "../bgsp-lib2", version = "0.3" }
# audio-lib = { path = "../audio-lib" }